[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ui/life_bar_container.png" type="Texture" id=1]
[ext_resource path="res://levels/level2/level_2.gd" type="Script" id=2]
[ext_resource path="res://scenes/player/player_health.gd" type="Script" id=3]
[ext_resource path="res://scripts/camera_shake.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/life_bar.png" type="Texture" id=5]
[ext_resource path="res://assets/desert_background.png" type="Texture" id=6]
[ext_resource path="res://assets/sfx/Interlude - Elevator Cruise.wav" type="AudioStream" id=7]
[ext_resource path="res://enemies/alien_ship_1/alien_ship_1.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/target_cursor/target_cursor.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/enemy_path/enemy_path.tscn" type="PackedScene" id=11]
[ext_resource path="res://default_theme.tres" type="Theme" id=12]
[ext_resource path="res://enemies/alien_ship_3/alien_ship_3.tscn" type="PackedScene" id=13]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 140, 25, 0, 0, 0, 0, 158, 26, 0, 0, 0, 0, 215, 29, 0, 0, 0, 0, 216, 43, 0, 0, 0, 0, 209, 50, 0, 0, 0, 0, 177, 53, 0, 0, 0, 0, 123, 53, 0, 0, 0, 0, 84, 53, 0, 0, 0, 0, 45, 51, 0, 0, 0, 0, 22, 53, 0, 0, 0, 0, 18, 65, 0, 0, 0, 0, 37, 70, 0, 0, 0, 0, 74, 69, 0, 0, 0, 0, 122, 68, 0, 0, 0, 0, 158, 69, 0, 0, 0, 0, 192, 69, 0, 0, 0, 0, 214, 83, 0, 0, 0, 0, 199, 98, 0, 0, 0, 0, 181, 101, 0, 0, 0, 0, 145, 102, 0, 0, 0, 0, 101, 102, 0, 0, 0, 0, 77, 102, 0, 0, 0, 0, 53, 105, 0, 0, 0, 0, 32, 100, 0, 0, 0, 0, 30, 86, 0, 0, 0, 0, 65, 74, 0, 0, 0, 0, 119, 72, 0, 0, 0, 0, 168, 69, 0, 0, 0, 0, 191, 63, 0, 0, 0, 0, 198, 51, 0, 0, 0, 0, 150, 47, 0, 0, 0, 0, 95, 41, 0, 0, 0, 0, 50, 38, 0, 0, 0, 0, 52, 30, 0, 0, 0, 0, 81, 26, 0, 0, 0, 0, 110, 27, 0, 0, 0, 0, 140, 25, 0, 0, 0, 0, 142, 27 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="Enemies" type="Node2D" parent="."]

[node name="AlienShip2" parent="Enemies" instance=ExtResource( 8 )]
position = Vector2( 106, 88 )

[node name="AlienShip1" parent="Enemies" instance=ExtResource( 8 )]
position = Vector2( 140, 25 )

[node name="AlienShip3" parent="Enemies" instance=ExtResource( 13 )]
position = Vector2( 26, 38 )
max_health = 200.0

[node name="DesertBackground" type="Sprite" parent="."]
position = Vector2( 120, 80 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="PlayerHealth" type="TextureProgress" parent="."]
margin_left = 235.0
margin_right = 240.0
margin_bottom = 160.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 5 )
fill_mode = 3
script = ExtResource( 3 )

[node name="TargetCursor" parent="." instance=ExtResource( 9 )]
position = Vector2( -21, 2 )
target_container_node_path = NodePath("../Enemies")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 120, 80 )
current = true
script = ExtResource( 4 )

[node name="Bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 10.524
autoplay = true

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 120, 152 )

[node name="Path2D" parent="." instance=ExtResource( 11 )]
curve = SubResource( 1 )

[node name="RemoteTransform2D" parent="Path2D/PathFollow2D" index="0"]
remote_path = NodePath("../../../Enemies/AlienShip1")

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="WinTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Win" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 12 )

[node name="Label" type="Label" parent="Win"]
margin_left = 75.0
margin_top = 73.0
margin_right = 165.0
margin_bottom = 87.0
text = "Level Complete!"
align = 1

[node name="Start" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 12 )

[node name="Label" type="Label" parent="Start"]
margin_left = 69.0
margin_top = 73.0
margin_right = 171.0
margin_bottom = 87.0
text = "Level 2.. Start!"
align = 1

[connection signal="timeout" from="StartTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WinTimer" to="." method="_on_WinTimer_timeout"]

[editable path="Path2D"]
